# controllers/userController.go
@@ -11,9 +11,9 @@ import (
 )
 
 type UpdateUserInput struct {
-	Name     string `json:"name" binding:"required"`
-	Username string `json:"username" binding:"required"`
-	Email    string `json:"email" binding:"required"`
+	Name     string `json:"name"`
+	Username string `json:"username"`
+	Email    string `json:"email" binding:"email"`
 	ImageUrl string `json:"image_url"`
 }
 
@@ -46,9 +46,9 @@ func GetCurrentUserProfile(ctx *gin.Context) {
 // @Tags User
 // @Produce json
 // @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
-// @Param   current_page      query    int        false        "current_page"
-// @Param   page_size         query    int        false        "page_size"
-// @Param   input_search      query    string     false        "input_search"
+// @Param   current_page      query    int        false        "current page for pagination"
+// @Param   page_size         query    int        false        "page size for pagination"
+// @Param   input_search      query    string     false        "input text for search category"
 // @Success 200 {object} map[string]interface{}
 // @Router /user [get]
 func GetListUsers(ctx *gin.Context) {
@@ -59,16 +59,25 @@ func GetListUsers(ctx *gin.Context) {
 		ctx.JSON(http.StatusUnauthorized, gin.H{"error": err.Error()})
 		return
 	}
-	limit, offset, err := utils.GetPagination(ctx)
-	if err != nil {
+	currentUser := models.User{}
+	if err := db.Where("id = ?", id).Take(&currentUser).Error; err != nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-	if err := db.Where("id != ? AND name LIKE ?", id, "%"+ctx.Query("input_search")+"%").Limit(limit).Offset(offset).Find(&users).Error; err != nil {
-		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+	if currentUser.Role == models.ADMIN_USER_ROLE {
+		limit, offset, err := utils.GetPagination(ctx)
+		if err != nil {
+			ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+			return
+		}
+		if err := db.Where("id != ? AND name LIKE ?", id, "%"+ctx.Query("input_search")+"%").Limit(limit).Offset(offset).Find(&users).Error; err != nil {
+			ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+			return
+		}
+		ctx.JSON(http.StatusOK, gin.H{"message": "Get all users success", "data": users})
 		return
 	}
-	ctx.JSON(http.StatusOK, gin.H{"message": "Get all users success", "data": users})
+	ctx.JSON(http.StatusUnauthorized, gin.H{"error": "Only Admin can look list users"})
 }
 
 // UpdateCurrentUser godoc
@@ -96,15 +105,52 @@ func UpdateCurrentUser(ctx *gin.Context) {
 		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-	updateUser := models.User{
+	updatedUser := models.User{
 		Name:     input.Name,
 		Username: input.Username,
 		Email:    input.Email,
 		ImageUrl: input.ImageUrl,
 	}
-	if err := db.Model(&oldUser).Updates(&updateUser).Error; err != nil {
+	if err := db.Model(&oldUser).Updates(&updatedUser).Error; err != nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-	ctx.JSON(http.StatusOK, gin.H{"message": "Success update current user data", "data": updateUser})
+	ctx.JSON(http.StatusOK, gin.H{"message": "Success update current user data", "data": updatedUser})
+}
+
+// DeleteUser godoc
+// @Summary Delete existing user.
+// @Description Delete existing user by id.
+// @Tags User
+// @Produce json
+// @Param id path string true "User id"
+// @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
+// @Success 200 {object} map[string]interface{}
+// @Router /user/{id} [delete]
+func DeleteUser(ctx *gin.Context) {
+	db := ctx.MustGet("db").(*gorm.DB)
+	id, err := token.ExtractTokenID(ctx)
+	if err != nil {
+		ctx.JSON(http.StatusUnauthorized, gin.H{"error": err.Error()})
+		return
+	}
+	currentUser := models.User{}
+	if err := db.Where("id = ?", id).Take(&currentUser).Error; err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	if currentUser.Role == models.ADMIN_USER_ROLE {
+		user := models.User{}
+		if err := db.Where("id = ?", ctx.Param("id")).Take(&user).Error; err != nil {
+			ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+			return
+		}
+		if err := db.Delete(&user).Error; err != nil {
+			ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+			return
+		}
+		ctx.JSON(http.StatusOK, gin.H{"message": "Delete User Success"})
+		return
+	}
+	ctx.JSON(http.StatusUnauthorized, gin.H{"error": "Only Admin can delete user"})
 }
